# capataz

./: README.md  capataz.py  pyproject.toml
capataz/: __init__.py  capataz.py  save_sequences.py
capataz/utils/: __init__.py  chunk_and_finalize.py  enforce_min_unique.py  files_to_processed_docs.py  get_file_paths.py  get_sequences.py  normalize_doc.py  pad_or_pack_docs.py  split_by_eos_token.py  split_list.py
tests/: test_capataz.py
